--- a/sanity/package.json
+++ b/sanity/package.json
@@ -10,14 +10,15 @@
     "start": "sanity start"
   },
   "dependencies": {
-    "@sanity/vision": "^3.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sanity": "^3.0.0",
-    "styled-components": "^6.0.0"
+    "@sanity/vision": "^5.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "sanity": "^5.1.0",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "typescript": "^5.0.0"
   }
 }
