--- a/sanity/package.json
+++ b/sanity/package.json
@@ -14,6 +14,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "sanity": "^5.1.0",
+    "sanity-plugin-media": "^4.1.1",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
