--- a/astro/package.json
+++ b/astro/package.json
@@ -14,7 +14,9 @@
         "@sanity/client": "^6.0.0",
         "@sanity/image-url": "^1.0.0",
         "astro": "^4.0.0",
-        "groq": "^3.0.0"
+        "glightbox": "^3.3.1",
+        "groq": "^3.0.0",
+        "swiper": "^12.0.3"
     },
     "devDependencies": {
         "tailwindcss": "^3.4.0"
