--- a/astro/package.json
+++ b/astro/package.json
@@ -19,6 +19,7 @@
         "swiper": "^12.0.3"
     },
     "devDependencies": {
+        "jimp": "^1.6.0",
         "tailwindcss": "^3.4.0"
     }
 }
