--- a/astro/package.json
+++ b/astro/package.json
@@ -18,6 +18,7 @@
         "@sanity/client": "^6.0.0",
         "@sanity/image-url": "^1.0.0",
         "astro": "^4.0.0",
+        "astro-portabletext": "^0.13.0",
         "glightbox": "^3.3.1",
         "groq": "^3.0.0",
         "swiper": "^12.0.3"
