--- a/astro/package.json
+++ b/astro/package.json
@@ -17,6 +17,7 @@
         "@astrojs/vercel": "^7.8.2",
         "@sanity/client": "^6.0.0",
         "@sanity/image-url": "^1.0.0",
+        "@vercel/analytics": "^1.6.1",
         "astro": "^4.0.0",
         "astro-portabletext": "^0.13.0",
         "glightbox": "^3.3.1",
